# sensor-measures-hr-flutter-package

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sensor_measures_hr_flutter_package_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: sensor_measures_hr_flutter_package.podspec
ios/Classes/: sensor_measures_hr_flutter_package.c
lib/: sensor_measures_hr_flutter_package.dart  sensor_measures_hr_flutter_package_bindings_generated.dart
src/: CMakeLists.txt  sensor_measures_hr_flutter_package.c  sensor_measures_hr_flutter_package.h
